Definindo o título da tela de edição

--- a/Source/App/pt-BR.lproj/Localizable.strings
+++ b/Source/App/pt-BR.lproj/Localizable.strings
@@ -4,3 +4,8 @@
 "diversas"     = "Diversas";
 "diaristas"    = "Diárias";
 "combustiveis" = "Combustível";
+
+"fixasSingular"        = "Fixa";
+"diversasSingular"     = "Diversa";
+"diaristasSingular"    = "Diária";
+"combustiveisSingular" = "Combustível";
